Média queries page principale + restaurants terminées

--- a/restaurants/menu_la_palette_du_gout.html
+++ b/restaurants/menu_la_palette_du_gout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,123 +9,127 @@
     <script src="https://kit.fontawesome.com/cfe476c6ba.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
+
 <body>
-                            <!-- HEADER -->
+    <!-- HEADER -->
     <header>
         <a href="../index.html" class="btn-return"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
         <img src="../images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
     </header>
     <main>
         <img src="../images/restaurants/La-palette-du-goût.jpg" class="image" alt="La palette du goût">
-        <div class="menu">
-            <div class="menu-title">
-                <h2>La palette du goût</h2>
-                <div class="menu-heart">
-                    <i class="fa-regular fa-heart fa-xl"></i>
+        <div class="wrapper">
+            <div class="menu">
+                <div class="menu-title">
+                    <h2>La palette du goût</h2>
+                    <div class="menu-heart">
+                        <i class="fa-regular fa-heart fa-xl"></i>
+                    </div>
                 </div>
-            </div>
-            <div class="formule">
-                <div class="formule-title">
-                    <h3>ENTRÉES</h3>
-                    <section class="menu-cards">
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Fricassée d'escargots</h4>
-                            <div class="menu-card-text">
-                                <span>Au piment d'Espelette</span>
-                                <span class="price">25€</span>
+                <div class="formule">
+                    <div class="formule-title">
+                        <h3>ENTRÉES</h3>
+                        <section class="menu-cards">
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Fricassée d'escargots</h4>
+                                    <div class="menu-card-text">
+                                        <span>Au piment d'Espelette</span>
+                                        <span class="price">25€</span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Foie gras de canard mi-cuit</h4>
-                            <div class="menu-card-text">
-                                <span>Et ses copeaux de truffe noire</span>
-                                <span class="price">35€</span>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Foie gras de canard mi-cuit</h4>
+                                    <div class="menu-card-text">
+                                        <span>Et ses copeaux de truffe noire</span>
+                                        <span class="price">35€</span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Oeuf au plat</h4>
-                            <div class="menu-card-text">
-                                <span>Assaisonné à la truffe sur lit de caviar</span>
-                                <span class="price">20€</span>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Oeuf au plat</h4>
+                                    <div class="menu-card-text">
+                                        <span>Assaisonné à la truffe sur lit de caviar</span>
+                                        <span class="price">20€</span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        </section>
                     </div>
-                    </section>
+                    <div class="formule-title">
+                        <h3>PLATS</h3>
+                        <section class="menu-cards">
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Filet de boeuf aux herbes</h4>
+                                    <div class="menu-card-text">
+                                        <span>Accompagné de sa ribambelle de légumes</span>
+                                        <span class="price">40€</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Parmentier de queue de boeuf</h4>
+                                    <div class="menu-card-text">
+                                        <span>À la truffe noire sur sa purée de panais</span>
+                                        <span class="price">35€</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Filet de turbot</h4>
+                                    <div class="menu-card-text">
+                                        <span>Aux agrumes</span>
+                                        <span class="price">44€</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                    <div class="formule-title">
+                        <h3>DESSERTS</h3>
+                        <section class="menu-cards">
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Paris-Brest</h4>
+                                    <div class="menu-card-text">
+                                        <span>Revisité</span>
+                                        <span class="price">18€</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Macaron au chocolat d'exception</h4>
+                                    <div class="menu-card-text">
+                                        <span>Et glace à la vanille de Madagascar</span>
+                                        <span class="price">22€</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Mousse au chocolat</h4>
+                                    <div class="menu-card-text">
+                                        <span>Au piment d'Espelette et à la truffe noire</span>
+                                        <span class="price">23€</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                    <a href="#" class="btn">Commander</a>
                 </div>
-                <div class="formule-title">
-                    <h3>PLATS</h3>
-                    <section class="menu-cards">
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Filet de boeuf aux herbes</h4>
-                            <div class="menu-card-text">
-                                <span>Accompagné de sa ribambelle de légumes</span>
-                                <span class="price">40€</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Parmentier de queue de boeuf</h4>
-                            <div class="menu-card-text">
-                                <span>À la truffe noire sur sa purée de panais</span>
-                                <span class="price">35€</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Filet de turbot</h4>
-                            <div class="menu-card-text">
-                                <span>Aux agrumes</span>
-                                <span class="price">44€</span>
-                            </div>
-                        </div>
-                    </div>
-                    </section>
-                </div>
-                <div class="formule-title">
-                    <h3>DESSERTS</h3>
-                    <section class="menu-cards">
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Paris-Brest</h4>
-                            <div class="menu-card-text">
-                                <span>Revisité</span>
-                                <span class="price">18€</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Macaron au chocolat d'exception</h4>
-                            <div class="menu-card-text">
-                                <span>Et glace à la vanille de Madagascar</span>
-                                <span class="price">22€</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Mousse au chocolat</h4>
-                            <div class="menu-card-text">
-                                <span>Au piment d'Espelette et à la truffe noire</span>
-                                <span class="price">23€</span>
-                            </div>
-                        </div>
-                    </div>
-                    </section>
-                </div>
-                <a href="#" class="btn">Commander</a>
             </div>
         </div>
     </main>
@@ -132,10 +137,12 @@
         <h4>Ohmyfood</h4>
         <ul>
             <li class="icone-footer"><i class="fa-solid fa-utensils fa-sm"></i><span>Proposer un restaurant</span></li>
-            <li class="icone-footer"><i class="fa-solid fa-handshake-angle fa-xs"></i><span>Devenir partenaire</span></li>
+            <li class="icone-footer"><i class="fa-solid fa-handshake-angle fa-xs"></i><span>Devenir partenaire</span>
+            </li>
             <li><a href="#">Mentions légales</a></li>
             <li><a href="mailto:Ohmyfood-services-clients@gmail.com">Contact</a></li>
-        </ul>    
+        </ul>
     </footer>
 </body>
+
 </html>
