--- a/restaurants/menu_la_note_enchantee.html
+++ b/restaurants/menu_la_note_enchantee.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,132 +9,136 @@
     <script src="https://kit.fontawesome.com/cfe476c6ba.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
+
 <body>
-                            <!-- HEADER -->
+    <!-- HEADER -->
     <header>
         <a href="../index.html" class="btn-return"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
         <img src="../images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
     </header>
     <main>
         <img src="../images/restaurants/La-note-enchantée.jpg" class="image" alt="La note enchantée">
-        <div class="menu">
-            <div class="menu-title">
-                <h2>La note enchantée</h2>
-                <div class="menu-heart">
-                    <i class="fa-regular fa-heart fa-xl"></i>
+        <div class="wrapper">
+            <div class="menu">
+                <div class="menu-title">
+                    <h2>La note enchantée</h2>
+                    <div class="menu-heart">
+                        <i class="fa-regular fa-heart fa-xl"></i>
+                    </div>
                 </div>
-            </div>
-            <div class="formule">
-                <div class="formule-title">
-                    <h3>ENTRÉES</h3>
-                    <section class="menu-cards">
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Ravioles de foie gras</h4>
-                            <div class="menu-card-text">
-                                <span>Accompagnées de leur crème à la truffe</span>
-                                <span class="price">25€</span>
+                <div class="formule">
+                    <div class="formule-title">
+                        <h3>ENTRÉES</h3>
+                        <section class="menu-cards">
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Ravioles de foie gras</h4>
+                                    <div class="menu-card-text">
+                                        <span>Accompagnées de leur crème à la truffe</span>
+                                        <span class="price">25€</span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Caviar osciètre</h4>
-                            <div class="menu-card-text">
-                                <span>Sur blini à la farine de blé noir</span>
-                                <span class="price">35€</span>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Caviar osciètre</h4>
+                                    <div class="menu-card-text">
+                                        <span>Sur blini à la farine de blé noir</span>
+                                        <span class="price">35€</span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Homard et espuma de potiron</h4>
-                            <div class="menu-card-text">
-                                <span>Marinés aux zestes d'orange</span>
-                                <span class="price">20€</span>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Homard et espuma de potiron</h4>
+                                    <div class="menu-card-text">
+                                        <span>Marinés aux zestes d'orange</span>
+                                        <span class="price">20€</span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Foie gras de canard cuit entier</h4>
-                            <div class="menu-card-text">
-                                <span>Confiture de figue et pain toasté</span>
-                                <span class="price">35€</span>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Foie gras de canard cuit entier</h4>
+                                    <div class="menu-card-text">
+                                        <span>Confiture de figue et pain toasté</span>
+                                        <span class="price">35€</span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        </section>
                     </div>
-                    </section>
+                    <div class="formule-title">
+                        <h3>PLATS</h3>
+                        <section class="menu-cards">
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Noix de coquilles Saint-Jacques</h4>
+                                    <div class="menu-card-text">
+                                        <span>Sur lit de purée de céleri-rave</span>
+                                        <span class="price">40€</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Langoustine poêlée</h4>
+                                    <div class="menu-card-text">
+                                        <span>Purée de patate douce</span>
+                                        <span class="price">35€</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Mijoté de queue de boeuf</h4>
+                                    <div class="menu-card-text">
+                                        <span>Et riz sauvage aux zestes de citron</span>
+                                        <span class="price">44€</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                    <div class="formule-title">
+                        <h3>DESSERTS</h3>
+                        <section class="menu-cards">
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Macaron noisette et chocolat</h4>
+                                    <div class="menu-card-text">
+                                        <span>Glace au caramel brun et sel de Guérande</span>
+                                        <span class="price">18€</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Baba au rhum revisité</h4>
+                                    <div class="menu-card-text">
+                                        <span>Avec son coulis de citron</span>
+                                        <span class="price">22€</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Tarte au citron meringuée</h4>
+                                    <div class="menu-card-text">
+                                        <span>Déstructurée</span>
+                                        <span class="price">23€</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                    <a href="#" class="btn">Commander</a>
                 </div>
-                <div class="formule-title">
-                    <h3>PLATS</h3>
-                    <section class="menu-cards">
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Noix de coquilles Saint-Jacques</h4>
-                            <div class="menu-card-text">
-                                <span>Sur lit de purée de céleri-rave</span>
-                                <span class="price">40€</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Langoustine poêlée</h4>
-                            <div class="menu-card-text">
-                                <span>Purée de patate douce</span>
-                                <span class="price">35€</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Mijoté de queue de boeuf</h4>
-                            <div class="menu-card-text">
-                                <span>Et riz sauvage aux zestes de citron</span>
-                                <span class="price">44€</span>
-                            </div>
-                        </div>
-                    </div>
-                    </section>
-                </div>
-                <div class="formule-title">
-                    <h3>DESSERTS</h3>
-                    <section class="menu-cards">
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Macaron noisette et chocolat</h4>
-                            <div class="menu-card-text">
-                                <span>Glace au caramel brun et sel de Guérande</span>
-                                <span class="price">18€</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Baba au rhum revisité</h4>
-                            <div class="menu-card-text">
-                                <span>Avec son coulis de citron</span>
-                                <span class="price">22€</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <div class="card-content">
-                            <h4 class="card-title">Tarte au citron meringuée</h4>
-                            <div class="menu-card-text">
-                                <span>Déstructurée</span>
-                                <span class="price">23€</span>
-                            </div>
-                        </div>
-                    </div>
-                    </section>
-                </div>
-                <a href="#" class="btn">Commander</a>
             </div>
         </div>
     </main>
@@ -141,10 +146,12 @@
         <h4>Ohmyfood</h4>
         <ul>
             <li class="icone-footer"><i class="fa-solid fa-utensils fa-sm"></i><span>Proposer un restaurant</span></li>
-            <li class="icone-footer"><i class="fa-solid fa-handshake-angle fa-xs"></i><span>Devenir partenaire</span></li>
+            <li class="icone-footer"><i class="fa-solid fa-handshake-angle fa-xs"></i><span>Devenir partenaire</span>
+            </li>
             <li><a href="#">Mentions légales</a></li>
             <li><a href="mailto:Ohmyfood-services-clients@gmail.com">Contact</a></li>
-        </ul>    
+        </ul>
     </footer>
 </body>
+
 </html>
