Ajout keyframes sur entrées-plats-desserts + création fichier keyframes.scss

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                                         <p class="card-subtitle">Ménilmontant</p>
                                     </div>
                                     <div class="heart">
-                                        <i class="fa-regular fa-heart fa-xl"></i>
+                                        <i class="fa-regular fa-heart fa-xl heart-empty"></i>
+                                        <i class="fa-solid fa-heart fa-xl heart-full"></i>
                                     </div>
                                 </div>
                             </a>
@@ -78,6 +79,7 @@
                                     </div>
                                     <div class="heart">
                                         <i class="fa-regular fa-heart fa-xl"></i>
+                                        <i class="fa-solid fa-heart fa-xl"></i>
                                     </div>
                                 </div>
                             </a>
@@ -93,6 +95,7 @@
                                     </div>
                                     <div class="heart">
                                         <i class="fa-regular fa-heart fa-xl"></i>
+                                        <i class="fa-solid fa-heart fa-xl"></i>
                                     </div>
                                 </div>
                             </a>
@@ -108,6 +111,7 @@
                                     </div>
                                     <div class="heart">
                                         <i class="fa-regular fa-heart fa-xl"></i>
+                                        <i class="fa-solid fa-heart fa-xl"></i>
                                     </div>
                                 </div>
                             </a>
