--- a/restaurants/menu_la_palette_du_gout.html
+++ b/restaurants/menu_la_palette_du_gout.html
@@ -29,6 +29,7 @@
                     <h2>La palette du goût</h2>
                     <div class="menu-heart">
                         <i class="fa-regular fa-heart fa-xl"></i>
+                        <i class="fa-solid fa-heart fa-xl"></i>
                     </div>
                 </div>
                 <div class="formule">
@@ -42,6 +43,9 @@
                                         <span>Au piment d'Espelette</span>
                                         <span class="price">25€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i> 
                                 </div>
                             </div>
                             <div class="menu-card">
