--- a/restaurants/menu_a_la_francaise.html
+++ b/restaurants/menu_a_la_francaise.html
@@ -29,6 +29,7 @@
                     <h2>À la française</h2>
                     <div class="menu-heart">
                         <i class="fa-regular fa-heart fa-xl"></i>
+                        <i class="fa-solid fa-heart fa-xl"></i>
                     </div>
                 </div>
                 <div class="formule">
