Ajout du dossier menus-restaurants, correction du check sur le menu, ajout du loader et animation des formules

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 </head>
 
 <body>
+    <!-- LOADER -->
+    <div class="loader">
+        <div class="dot d1"></div>
+        <div class="dot d2"></div>
+        <div class="dot d3"></div>
+    </div>
     <!-- HEADER -->
     <header>
         <img src="./images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
@@ -51,7 +57,7 @@
                 <div class="restaurants-cards">
                     <div class="cards">
                         <article class="card">
-                            <a href="restaurants/menu_la_palette_du_gout.html">
+                            <a href="menus-restaurants/menu_la_palette_du_gout.html">
                                 <span class="new">Nouveau</span>
                                 <img src="./images/restaurants/La-palette-du-goût.jpg"
                                     alt="Table du restaurant la palette du goût">
@@ -68,7 +74,7 @@
                             </a>
                         </article>
                         <article class="card">
-                            <a href="restaurants/menu_la_note_enchantee.html">
+                            <a href="menus-restaurants/menu_la_note_enchantee.html">
                                 <span class="new">Nouveau</span>
                                 <img src="./images/restaurants/La-note-enchantée.jpg"
                                     alt="Table du restaurant La note enchantée">
@@ -85,7 +91,7 @@
                             </a>
                         </article>
                         <article class="card">
-                            <a href="restaurants/menu_a_la_francaise.html">
+                            <a href="menus-restaurants/menu_a_la_francaise.html">
                                 <img src="./images/restaurants/À-la-française.jpg"
                                     alt="Table du restaurant À la française">
                                 <div class="card-content">
@@ -101,7 +107,7 @@
                             </a>
                         </article>
                         <article class="card">
-                            <a href="restaurants/menu_le_delice_des_sens.html">
+                            <a href="menus-restaurants/menu_le_delice_des_sens.html">
                                 <img src="./images/restaurants/Le-délice-des-sens.jpg"
                                     alt="Table du restaurant Le délice des sens">
                                 <div class="card-content">
