--- a/menus-restaurants/menu_la_palette_du_gout.html
+++ b/menus-restaurants/menu_la_palette_du_gout.html
@@ -45,7 +45,7 @@
                                     </div>
                                 </div>
                                 <div class="check">
-                                    <i class="fa-solid fa-check fa-sm"></i> 
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                             <div class="menu-card">
@@ -56,6 +56,9 @@
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -64,6 +67,9 @@
                                         <span>Assaisonné à la truffe sur lit de caviar</span>
                                         <span class="price">20€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                         </section>
@@ -79,6 +85,9 @@
                                         <span class="price">40€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -88,6 +97,9 @@
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -96,6 +108,9 @@
                                         <span>Aux agrumes</span>
                                         <span class="price">44€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                         </section>
@@ -111,6 +126,9 @@
                                         <span class="price">18€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -120,6 +138,9 @@
                                         <span class="price">22€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -128,6 +149,9 @@
                                         <span>Au piment d'Espelette et à la truffe noire</span>
                                         <span class="price">23€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                         </section>
