--- a/menus-restaurants/menu_a_la_francaise.html
+++ b/menus-restaurants/menu_a_la_francaise.html
@@ -44,6 +44,9 @@
                                         <span class="price">25€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -53,6 +56,9 @@
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -61,6 +67,9 @@
                                         <span>Revisitée</span>
                                         <span class="price">20€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                         </section>
@@ -76,6 +85,9 @@
                                         <span class="price">40€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -85,6 +97,9 @@
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -93,6 +108,9 @@
                                         <span>Sur son lit de gnocchis aux légumes</span>
                                         <span class="price">44€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                         </section>
@@ -108,6 +126,9 @@
                                         <span class="price">18€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -117,6 +138,9 @@
                                         <span class="price">22€</span>
                                     </div>
                                 </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
@@ -125,6 +149,9 @@
                                         <span>Myrtilles et pâte d'amande</span>
                                         <span class="price">23€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                         </section>
