--- a/menus-restaurants/menu_la_note_enchantee.html
+++ b/menus-restaurants/menu_la_note_enchantee.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le délice des sens</title>
+    <title>La note enchantée</title>
     <script src="https://kit.fontawesome.com/cfe476c6ba.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,11 +22,11 @@
         <img src="../images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
     </header>
     <main>
-        <img src="../images/restaurants/Le-délice-des-sens.jpg" class="image" alt="Le délice des sens">
+        <img src="../images/restaurants/La-note-enchantée.jpg" class="image" alt="La note enchantée">
         <div class="wrapper">
             <div class="menu">
                 <div class="menu-title">
-                    <h2>Le délice des sens</h2>
+                    <h2>La note enchantée</h2>
                     <div class="menu-heart">
                         <i class="fa-regular fa-heart fa-xl"></i>
                         <i class="fa-solid fa-heart fa-xl"></i>
@@ -38,29 +38,50 @@
                         <section class="menu-cards">
                             <div class="menu-card">
                                 <div class="card-content">
-                                    <h4 class="card-title">Tartare de thon</h4>
+                                    <h4 class="card-title">Ravioles de foie gras</h4>
                                     <div class="menu-card-text">
-                                        <span>Assaisonné au yuzu</span>
+                                        <span>Accompagnées de leur crème à la truffe</span>
                                         <span class="price">25€</span>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="menu-card">
-                                <div class="card-content">
-                                    <h4 class="card-title">Bouchée de homard croustillant</h4>
-                                    <div class="menu-card-text">
-                                        <span>Et sa farandole de petits légumes</span>
-                                        <span class="price">35€</span>
-                                    </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
-                                    <h4 class="card-title">Velouté de cèpes</h4>
+                                    <h4 class="card-title">Caviar osciètre</h4>
                                     <div class="menu-card-text">
-                                        <span>Aux truffes</span>
+                                        <span>Sur blini à la farine de blé noir</span>
+                                        <span class="price">35€</span>
+                                    </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Homard et espuma de potiron</h4>
+                                    <div class="menu-card-text">
+                                        <span>Marinés aux zestes d'orange</span>
                                         <span class="price">20€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Foie gras de canard cuit entier</h4>
+                                    <div class="menu-card-text">
+                                        <span>Confiture de figue et pain toasté</span>
+                                        <span class="price">35€</span>
+                                    </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                         </section>
@@ -70,29 +91,38 @@
                         <section class="menu-cards">
                             <div class="menu-card">
                                 <div class="card-content">
-                                    <h4 class="card-title">Poulet rôti aux herbes de Provence</h4>
+                                    <h4 class="card-title">Noix de coquilles Saint-Jacques</h4>
                                     <div class="menu-card-text">
-                                        <span>Et sa crème de truffe</span>
+                                        <span>Sur lit de purée de céleri-rave</span>
                                         <span class="price">40€</span>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="menu-card">
-                                <div class="card-content">
-                                    <h4 class="card-title">Langouste rôtie</h4>
-                                    <div class="menu-card-text">
-                                        <span>Et ses légumes de saison</span>
-                                        <span class="price">35€</span>
-                                    </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
-                                    <h4 class="card-title">Côte de boeuf Angus</h4>
+                                    <h4 class="card-title">Langoustine poêlée</h4>
                                     <div class="menu-card-text">
-                                        <span>Et sa purée de panais</span>
+                                        <span>Purée de patate douce</span>
+                                        <span class="price">35€</span>
+                                    </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Mijoté de queue de boeuf</h4>
+                                    <div class="menu-card-text">
+                                        <span>Et riz sauvage aux zestes de citron</span>
                                         <span class="price">44€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                         </section>
@@ -102,29 +132,38 @@
                         <section class="menu-cards">
                             <div class="menu-card">
                                 <div class="card-content">
-                                    <h4 class="card-title">Farandole de desserts</h4>
+                                    <h4 class="card-title">Macaron noisette et chocolat</h4>
                                     <div class="menu-card-text">
-                                        <span>Du chef</span>
+                                        <span>Glace au caramel brun et sel de Guérande</span>
                                         <span class="price">18€</span>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="menu-card">
-                                <div class="card-content">
-                                    <h4 class="card-title">Crème brulée</h4>
-                                    <div class="menu-card-text">
-                                        <span>Revisitée</span>
-                                        <span class="price">22€</span>
-                                    </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                             <div class="menu-card">
                                 <div class="card-content">
-                                    <h4 class="card-title">Tiramisu</h4>
+                                    <h4 class="card-title">Baba au rhum revisité</h4>
                                     <div class="menu-card-text">
-                                        <span>À la noisette</span>
+                                        <span>Avec son coulis de citron</span>
+                                        <span class="price">22€</span>
+                                    </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
+                                </div>
+                            </div>
+                            <div class="menu-card">
+                                <div class="card-content">
+                                    <h4 class="card-title">Tarte au citron meringuée</h4>
+                                    <div class="menu-card-text">
+                                        <span>Déstructurée</span>
                                         <span class="price">23€</span>
                                     </div>
+                                </div>
+                                <div class="check">
+                                    <i class="fa-solid fa-check fa-sm"></i>
                                 </div>
                             </div>
                         </section>
